--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,27 @@
 {
     "java.project.sourcePaths": [
-        "types/java/src/test/java",
         "types/java/src/main/java",
+        "types/java/src/test/java",
+        "commons/java/src/main/java",
+        "commons/java/src/test/java",
         "blender/river/core/src/main/java",
-        "utils/java/buffer/src/main/java"
     ],
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "bazel-bin/external/rules_jvm_external~6.0~maven~maven/v1/https/repo1.maven.org/maven2/**/*.jar"
-    ]
+        "bazel-bin/external/**/*.jar"
+    ],
+    "java.format.settings.url": ".vscode/java-google-style.xml",
+    "java.format.settings.profile": "GoogleStyle",
+    "[java]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "redhat.java",
+        "editor.tabSize": 2,
+    },
+    "[c]": {
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "ms-vscode.cpptools",
+        "editor.tabSize": 2
+    },
+    "C_Cpp.clang_format_fallbackStyle": "Google",
+    "C_Cpp.clang_format_style": "file"
 }
