--- a/commons/java/BUILD
+++ b/commons/java/BUILD
@@ -6,7 +6,9 @@ java_library(
 java_test(
     name = "BufferTest",
     srcs = ["src/test/java/org/blab/commons/BufferTest.java"],
+    test_class = "org.blab.commons.BufferTest",
     deps = [
         ":buffer",
+        "@maven//:org_junit_jupiter_junit_jupiter_api"
     ],
 )
