--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,10 @@
     "java.project.sourcePaths": [
         "types/java/src/test/java",
         "types/java/src/main/java",
+        "commons/java/src/test/java",
         "commons/java/src/main/java",
         "blender/river/core/src/main/java",
-        "commons/java/src/test/java"
+        "blender/registry/core/src/main/java"
     ],
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
