--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,8 +5,9 @@
         "commons/java/src/test/java",
         "commons/java/src/main/java",
         "blender/river/core/src/main/java",
+        "blender/registry/web/src/main/java",
         "blender/registry/core/src/main/java",
-        "blender/registry/web/src/main/java"
+        "blender/registry/core/src/test/java"
     ],
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
