--- a/pkg/utils-java/BUILD
+++ b/pkg/utils-java/BUILD
@@ -1,12 +1,12 @@
 java_library(
     name = "buffer",
-    srcs = ["src/main/java/org/blab/commons/Buffer.java"],
+    srcs = ["src/main/java/org/blab/utils/Buffer.java"],
 )
 
 java_test(
     name = "BufferTest",
-    srcs = ["src/test/java/org/blab/commons/BufferTest.java"],
-    test_class = "org.blab.commons.BufferTest",
+    srcs = ["src/test/java/org/blab/utils/BufferTest.java"],
+    test_class = "org.blab.utils.BufferTest",
     deps = [
         ":buffer",
         "@maven//:org_junit_jupiter_junit_jupiter_api",
