--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -5,6 +5,10 @@ module(
     version = "1.0",
 )
 
+# General dependencies
+bazel_dep(name = "rules_proto", version = "6.0.0-rc2")
+bazel_dep(name = "protobuf", version = "23.1")
+
 # Java dependecies
 bazel_dep(name = "rules_jvm_external", version = "6.0")
 
