--- a/pkg/utils-java/BUILD
+++ b/pkg/utils-java/BUILD
@@ -3,12 +3,27 @@ java_library(
     srcs = ["src/main/java/org/blab/utils/Buffer.java"],
 )
 
+java_library(
+    name = "socket-channel",
+    srcs = ["src/main/java/org/blab/utils/BlockingSocketChannel.java"],
+)
+
 java_test(
     name = "BufferTest",
     srcs = ["src/test/java/org/blab/utils/BufferTest.java"],
     test_class = "org.blab.utils.BufferTest",
     deps = [
         ":buffer",
+        "@maven//:org_junit_jupiter_junit_jupiter_api",
+    ],
+)
+
+java_test(
+    name = "BlockingSocketChannelTest",
+    srcs = ["src/test/java/org/blab/utils/BlockingSocketChannelTest.java"],
+    test_class = "org.blab.utils.BlockingSocketChannelTest",
+    deps = [
+        ":socket-channel",
         "@maven//:org_junit_jupiter_junit_jupiter_api",
     ],
 )
