--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,13 @@
 {
+    "java.project.sourcePaths": [
+        "types/java/src/test/java",
+        "types/java/src/main/java",
+        "commons/java/src/test/java",
+        "commons/java/src/main/java",
+        "blender/river/core/src/main/java",
+        "blender/registry/core/src/main/java",
+        "blender/registry/core/src/test/java"
+    ],
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
         "bazel-bin/external/**/*.jar"
@@ -7,17 +16,7 @@
         "editor.formatOnSave": true,
         "editor.tabSize": 2,
         "editor.inlayHints.enabled": "off",
-        "editor.defaultFormatter": "mngrm3a.vscode-google-java-formatter",
+        "editor.defaultFormatter": "mngrm3a.vscode-google-java-formatter"
     },
-    "gjf.jarPath": "/home/mehandes/blab/tools/google-java-format-1.19.2-all-deps.jar",
-    "java.project.sourcePaths": [
-        "prj/blender/pkg/registry/src/test/java",
-        "prj/blender/pkg/registry/src/main/java",
-        "pkg/utils-java/src/test/java",
-        "pkg/utils-java/src/main/java",
-        "pkg/types-java/src/test/java",
-        "pkg/types-java/src/main/java",
-        "pkg/river-java/src/main/java"
-    ],
-    "java.compile.nullAnalysis.mode": "automatic"
+    "gjf.jarPath": "/home/mehandes/blab/tools/google-java-format-1.19.2-all-deps.jar"
 }
