--- a/pkg/river-java/BUILD
+++ b/pkg/river-java/BUILD
@@ -3,17 +3,18 @@ java_library(
     srcs = glob(["src/main/java/org/blab/river/*.java"]),
 )
 
+java_library(
+    name = "vcas",
+    srcs = glob(["src/main/java/org/blab/river/vcas/*.java"]),
+    deps = [
+        ":river-java",
+        "//pkg/utils-java:socket-channel",
+    ],
+)
+
 # java_library(
 #     name = "mqtt",
 #     srcs = glob(["src/main/java/org/blab/river/mqtt/*.java"]),
-#     deps = [
-#         ":river-java"
-#     ]
-# )
-
-# java_library(
-#     name = "vcas",
-#     srcs = glob(["src/main/java/org/blab/river/vcas/*.java"]),
 #     deps = [
 #         ":river-java"
 #     ]
