--- a/pkg/river-java/BUILD
+++ b/pkg/river-java/BUILD
@@ -1,3 +1,5 @@
+package(default_visibility = ["//visibility:public"])
+
 java_library(
     name = "river-java",
     srcs = glob(["src/main/java/org/blab/river/*.java"]),
@@ -8,6 +10,7 @@ java_library(
     srcs = glob(["src/main/java/org/blab/river/vcas/*.java"]),
     deps = [
         ":river-java",
+        "//pkg/utils-java:buffer",
         "//pkg/utils-java:socket-channel",
     ],
 )
@@ -19,3 +22,13 @@ java_library(
 #         ":river-java"
 #     ]
 # )
+
+java_binary(
+    name = "VcasConsumerTest",
+    srcs = ["src/test/java/org/blab/river/vcas/VcasConsumerTest.java"],
+    main_class = "org.blab.river.vcas.VcasConsumerTest",
+    deps = [
+        ":river-java",
+        ":vcas",
+    ],
+)
