--- a/prj/lambda/svc/demo/BUILD
+++ b/prj/lambda/svc/demo/BUILD
@@ -1,6 +1,9 @@
 java_binary(
     name = "demo",
-    srcs = glob(["src/main/java/**/*.java"]),
+    srcs = glob([
+        "src/main/java/**/*.java",
+    ]),
+    data = glob(["src/main/resources/**"]),
     main_class = "org.blab.lambda.demo.Demo",
     deps = [
         "//pkg/river-java",
