--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -23,6 +23,7 @@ maven.install(
 
         #  Testing
         "org.junit.jupiter:junit-jupiter-api:5.10.2",
+        "junit:junit:4.13.2",
 
         #  Logging
         "org.slf4j:slf4j-api:2.0.12",
