--- a/prj/blender/pkg/registry/BUILD
+++ b/prj/blender/pkg/registry/BUILD
@@ -1,50 +1,19 @@
 java_library(
     name = "registry",
-    srcs = glob(["src/main/java/**/*.java"]),
+    srcs = glob(["src/main/java/org/blab/blender/registry/*.java"]),
     deps = [
         "@maven//:org_apache_avro_avro"
     ]
 )
 
 java_test(
-    name = "PosixPatternValidatorTest",
-    srcs = glob(["src/test/java/**/PosixPatternValidatorTest.java"]),
-    test_class = "org.blab.blender.registry.PosixPatternValidatorTest",
-    deps = [
-        ":registry",
-        "@maven//:org_junit_jupiter_junit_jupiter_api",
-    ],
+  name = "SchemeTest",
+  srcs = ["src/test/java/org/blab/blender/registry/SchemeTest.java"],
+  deps = [
+    "@maven//:org_junit_jupiter_junit_jupiter_api",
+    "@maven//:junit_junit",
+    "@maven//:org_apache_avro_avro",
+    ":registry"
+  ]
 )
 
-java_test(
-    name = "AvroSchemaValidatorTest",
-    srcs = glob(["src/test/java/**/AvroSchemaValidatorTest.java"]),
-    test_class = "org.blab.blender.registry.AvroSchemaValidatorTest",
-    deps = [
-        ":registry",
-        "@maven//:org_junit_jupiter_junit_jupiter_api",
-        "@maven//:org_apache_avro_avro"
-    ],
-)
-
-java_test(
-    name = "SchemaRecordRepositoryTest",
-    srcs = glob(["src/test/java/**/SchemaRecordRepositoryTest.java"]),
-    test_class = "org.blab.blender.registry.SchemaRecordRepositoryTest",
-    deps = [
-        ":registry",
-        "@maven//:org_junit_jupiter_junit_jupiter_api",
-        "@maven//:org_apache_avro_avro"
-    ],
-)
-
-java_test(
-    name = "RegistryTest",
-    srcs = glob(["src/test/java/**/RegistryTest.java"]),
-    test_class = "org.blab.blender.registry.RegistryTest",
-    deps = [
-        ":registry",
-        "@maven//:org_junit_jupiter_junit_jupiter_api",
-        "@maven//:org_apache_avro_avro"
-    ],
-)
